2022-01-16  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ios-dev-stream.c (ios_dev_stream_pread): Fix handling of
	errors and EOF in buffer write-back.
	* libpoke/ios-buffer.c (ios_buffer_allocate_new_chunk): Use IOD_OK
	instead of 0.
	(ios_buffer_pread): Likewise.
	(ios_buffer_pwrite): Likewise.
	(ios_buffer_forget_till): Likewise.

2022-01-14  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* testsuite/lib/poke.exp (tests_pattern): New variable.
	(tests_pattern_pk): Likewise.
	* testsuite/poke.cmd/cmd.exp: Use `tests_pattern`.
	* testsuite/poke.map/map.exp: Likewise.
	* testsuite/poke.pickles/pickles.exp: Likewise.
	* testsuite/poke.pkl/pkl.exp: Likewise.
	* testsuite/poke.pktest/pktest.exp: Likewise.
	* testsuite/poke.std/std.exp: Likewise.
	* testsuite/poke.time/time.exp: Likewise.
	* etc/hacking.org (Run selected tests): New section.

2022-01-14  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/ios-dev.h (struct ios_dev_if): Move comments to
	libpoke.h.
	* libpoke/libpoke.h (struct ios_iod_if): Add comments moved
	from ios-dev.h

2022-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.h (pk_array_elem_value): Rename from
	pk_array_elem_val.
	* libpoke/pk-val.c (pk_array_elem_value): Likewise.
	* poke/pk-cmd-set.c (pk_cmd_set_init): Update accordingly.
	* poke/pk-mi-json.c (pk_val_to_json_array): Likewise.
	* poke/pk-ios.c (pk_open_file): Likewise.

2022-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.h (PK_VAL_TYPE): Define.
	* libpoke/pk-val.c (pk_val_kind): Return PK_VAL_TYPE for types.

2022-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.h (PK_TYPE_UNKNOWN): Rename from PK_UNKNOWN.
	(PK_TYPE_INT): Likewise.
	(PK_TYPE_UINT): Likewise.
	(PK_TYPE_STRING): Likewise.
	(PK_TYPE_OFFSET): Likewise.
	(PK_TYPE_ARRAY): Likewise.
	(PK_TYPE_STRUCT): Likewise.
	(PK_TYPE_CLOSURE): Likewise.
	(PK_TYPE_ANY): Likewise.
	(PK_VAL_INT): Define.
	(PK_VAL_UINT): Likewise.
	(PK_VAL_STRING): Likewise.
	(PK_VAL_OFFSET): Likewise.